# sim

./: .gitignore  Cargo.toml  package-lock.json  readme.md  webpack.config.js
.github/workflows/: deploy.yml  main.yml
js/: index.js
sim/: Cargo.toml
sim/src/: audio.rs  input.rs  lib.rs
sim/src/entity/: mod.rs  setting.rs  step.rs  trigger.rs
sim/src/glyphs/: ascii.rs  mod.rs
sim/src/grid/: mod.rs  position.rs
sim/src/ui/: bitmap.rs  color.rs  graphics.rs  image.rs  mod.rs
src/: device.rs  lib.rs  main.rs  sample.rs  state.rs  stream.rs  track.rs  traits.rs
src/app/: command.rs  files.rs  grid.rs  input_state.rs  message.rs  mod.rs  state.rs  user_interface.rs  vco.rs
src/app/entities/: entity.rs  mod.rs  modifier.rs  track.rs  vco.rs
src/app/grid/: .mod.rs  connector.rs  entity.rs  grid.rs  grid_entity.rs  grid_position.rs  mod.rs  position.rs  rect.rs  step.rs  trigger.rs
src/app/modules/: track.rs  vco.rs
src/effects/: mod.rs
src/ui/: mod.rs  state.rs
src/wave/: mod.rs
src/web/: audio.rs  graphics.rs  mod.rs
static/: index.html
web-client/: index.html  package-lock.json  package.json  vite.config.ts
web-client/sim-web-client/: Cargo.toml
web-client/sim-web-client/src/: lib.rs  web_graphics.rs
web-client/src/: main.ts
